<resources>
    <string name="app_name">Chess</string>
    <string name="chess_meister">Chess Meister</string>
    <string name="two_player">2 Player</string>
    <string name="four_player">4 Player</string>
    <string name="settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="player_1">Player 1:</string>
    <string name="player_1_name">Player 1 Name:</string>
    <string name="player_2">Player 2:</string>
    <string name="player_2_name">Player 2 Name:</string>
    <string name="continue">Continue</string>
    <string name="cont">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="turn_name">Player\'s Turn</string>
</resources>